<resources>
    <string name="app_name">SuperBancoImobiliarioDMO</string>
    <string name="payer">Jogador a pagar (numero 0 a 5)</string>
    <string name="receiver">Jogador a recebedor (numero 0 a 5)</string>
    <string name="start_game">Começar o jogo</string>
    <string name="transf_button">Transferir</string>
    <string name="number_error_message">Valor digitado inválido.</string>
    <string name="qtd">Valor</string>
    <string name="pay_button">Pagar</string>
    <string name="receive_button">Receber</string>
    <string name="round_end_button">Fim do round</string>
</resources>